--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Resume</title>
+	<meta charset="UTF-8">
+	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
@@ -13,7 +14,7 @@
 		<ul id="nav-title">
 		<li>About me</li>
 		<li>Resume</li>
-		<li>Photography</li>
+		<li>Portfolio</li>
 		<li>Contact</li>
 		</ul>
 	</div>
@@ -25,7 +26,7 @@
 				<h4 class="profile-title">About me</h4>
 				 <div class="profile-text">
 				 <p>Hi there!</p>
-				 <p> Thanks for visiting my personal website. I'm a Swiss Corporate Communication Specialist & Tech enthusiast based in Hong Kong. I specialize in helping organizations connect effectively with their audiences through simple but effective communication using the best channels available–digital or print. To do so, I use a savvy mix of good writing, a passion for simplicity and clarity, as well as a deep geekery and love of all things tech. If you want to find out more, check out my Resume!</p>
+				 <p> Thanks for visiting my personal website. I'm a Swiss Corporate Communication Specialist & Tech enthusiast based in Hong Kong. I specialize in helping organizations connect effectively with their audiences through simple but effective communication using the best channels available. To do so, I use a savvy mix of good writing, a passion for simplicity and clarity, as well as a deep geekery and love of all things tech. If you want to find out more, check out my Resume!</p>
 				 </div>
 			</div>
 		</div>
