--- a/resume.html
+++ b/resume.html
@@ -18,16 +18,19 @@
 		<li>Contact</li>
 		</ul>
 	</div>
-	<div class="resume-content">			
-		<div class="row">
+	<div id="content">
+		<div id="resume">
+			<h3 id="resume-title">Experience</h3>
+			<div class="resume-row">
 				<div class="column1">
 					<div class="job-date">2018 - Present</div>
-					<div class="job-employer">Ralph Lauren</div>
+					<div class="employer">Ralph Lauren</div>
 				</div>
 				<div class="column2">
-					<div class="job-title">Manager, People Data & Analytics</div>
-					<div class="job-description">Typer description here</div>
+					<div class="job-title">Manager, HR Data & Analytics</div>
+					<div class="job-description">Enter job description here</div><!--Fill in later-->
 				</div>
 			</div>
 		</div>
+	</div>
 </body>
